bufrtables_source = B0000000000000006000.TXT \
B0000000000000007000.TXT \
B0000000000000008000.TXT \
B0000000000000009000.TXT \
B0000000000000010000.TXT \
B0000000000000011000.TXT \
B0000000000000012000.TXT \
B0000000000000013000.TXT \
B0000000000000014000.TXT \
B0000000000034011001.TXT \
B0000000000034013001.TXT \
B0000000000053011001.TXT \
B0000000000056005005.TXT \
B0000000000059003001.TXT \
B0000000000059003003.TXT \
B0000000000074002001.TXT \
B0000000000074011001.TXT \
B0000000000078011007.TXT \
B0000000000078011008.TXT \
B0000000000078012008.TXT \
B0000000000088013001.TXT \
B0000000000089011255.TXT \
B0000000000089012001.TXT \
B0000000000098000000.TXT \
B0000000000098002001.TXT \
B0000000000098006000.TXT \
B0000000000098006001.TXT \
B0000000000098007001.TXT \
B0000000000098008001.TXT \
B0000000000098009001.TXT \
B0000000000098010001.TXT \
B0000000000098011000.TXT \
B0000000000098011001.TXT \
B0000000000098012000.TXT \
B0000000000098012001.TXT \
B0000000000098013000.TXT \
B0000000000098013001.TXT \
B0000000000098014001.TXT \
B0000000000099000001.TXT \
B0000000000099010001.TXT \
B0000000000234012001.TXT \
B0000000000254010001.TXT \
B0000000000254011001.TXT \
C0000000000000006000.TXT \
C0000000000000007000.TXT \
C0000000000000008000.TXT \
C0000000000000009000.TXT \
C0000000000000010000.TXT \
C0000000000000011000.TXT \
C0000000000000012000.TXT \
C0000000000000013000.TXT \
C0000000000000014000.TXT \
C0000000000034011001.TXT \
C0000000000034013001.TXT \
C0000000000053011001.TXT \
C0000000000056005005.TXT \
C0000000000059003001.TXT \
C0000000000059003003.TXT \
C0000000000074011001.TXT \
C0000000000078011007.TXT \
C0000000000078011008.TXT \
C0000000000078012008.TXT \
C0000000000089011255.TXT \
C0000000000089012001.TXT \
C0000000000098007001.TXT \
C0000000000098008001.TXT \
C0000000000098009001.TXT \
C0000000000098010001.TXT \
C0000000000098011000.TXT \
C0000000000098011001.TXT \
C0000000000098012000.TXT \
C0000000000098012001.TXT \
C0000000000098013000.TXT \
C0000000000098013001.TXT \
C0000000000098014001.TXT \
C0000000000099000001.TXT \
C0000000000099010001.TXT \
C0000000000234012001.TXT \
C0000000000254010001.TXT \
D0000000000000006000.TXT \
D0000000000000007000.TXT \
D0000000000000008000.TXT \
D0000000000000009000.TXT \
D0000000000000010000.TXT \
D0000000000000011000.TXT \
D0000000000000012000.TXT \
D0000000000000013000.TXT \
D0000000000000014000.TXT \
D0000000000034011001.TXT \
D0000000000034013001.TXT \
D0000000000053011001.TXT \
D0000000000056005005.TXT \
D0000000000059003001.TXT \
D0000000000059003003.TXT \
D0000000000074002001.TXT \
D0000000000074011001.TXT \
D0000000000078011007.TXT \
D0000000000078011008.TXT \
D0000000000078012008.TXT \
D0000000000088013001.TXT \
D0000000000089011255.TXT \
D0000000000089012001.TXT \
D0000000000098000000.TXT \
D0000000000098002001.TXT \
D0000000000098006000.TXT \
D0000000000098006001.TXT \
D0000000000098007001.TXT \
D0000000000098008001.TXT \
D0000000000098009001.TXT \
D0000000000098010001.TXT \
D0000000000098011000.TXT \
D0000000000098011001.TXT \
D0000000000098012000.TXT \
D0000000000098012001.TXT \
D0000000000098013000.TXT \
D0000000000098013001.TXT \
D0000000000098014001.TXT \
D0000000000099000001.TXT \
D0000000000099010001.TXT \
D0000000000234012001.TXT \
D0000000000254010001.TXT \
D0000000000254011001.TXT \
L0000000000098012001.TXT

EXTRA_DIST = $(bufrtables_source)

bufrtablesdir = $(pkgdatadir)/bufrtables
bufrtables_DATA = $(bufrtables_source)
